--- a/ThesisManagement/appsettings.json
+++ b/ThesisManagement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ThesisManagement-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=ThesisManagement;Data Source=DESKTOP-IEUVF3H\\TEW_SQLEXPRESS;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
